Fix the way to generate flow references, which should include the run id. (#104)